--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,9 @@
     "no-undef": 0,
     "jsx-a11y/click-events-have-key-events": [0],
     "jsx-a11y/no-noninteractive-element-interactions": [0],
-    "jsx-a11y/no-static-element-interactions": [0]
+    "jsx-a11y/no-static-element-interactions": [0],
+    "prefer-destructuring":["error", {"object": false, "array": false}],
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
+
   }
 }
